--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/woodsoft.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\lucas\\Documents\\Aulas Facul\\6 Semestre\\Software livre\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.JDB-04.08.2014.jar=/home/lucas/Documentos/Aulas Facul/6 Semestre/Software livre/JDB-04.08.2014.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JDB-04.08.2014.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
