Pegar id do usuario e desabilitar botões conforme ação (Cad Cli/For)

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.JDB-04.08.2014.jar=C:\\Users\\lucas\\Documents\\GITHUB\\wood_soft\\JDB-04.08.2014.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Diego\\Documents\\GitHub\\wood_soft\\jcalendar-1.4.jar
+file.reference.JDB-04.08.2014.jar=C:\\Users\\Diego\\Documents\\GitHub\\wood_soft\\JDB-04.08.2014.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\lucas\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Diego\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
