--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.JDB-04.08.2014.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.JasperReports.classpath}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
